--- a/style2.css
+++ b/style2.css
@@ -1,15 +1,26 @@
 .head, .small {
   font-family: "Comic Sans MS", cursive, sans-serif;
+  padding-top: 10px;
 }
 
-.content {
+#content {
   background-color: grey;
+}
+
+.product h3 {
+  opacity: 1;
+  font-style: italic;
+  padding-left: 15px;
+}
+
+.product p {
+  font-size: 12px;
+  padding-left: 15px;
 }
 
 .head {
   font-size: 35px;
   text-align: center;
-  padding-top: 10px;
 }
 
 .small {
